# marimo-viser

./: .gitignore  AGENTS.md  README.md  next_steps.md  pyproject.toml
.agents/skills/marimo-batch/references/: starting-point.py
notebooks/: example.py  gsplat_viewer.py  marimo_viewer.py  spherical_harmonics.py  splat_viewer.py
src/marimo_3dv/: __init__.py
src/marimo_3dv/gui/: __init__.py
src/marimo_3dv/ops/: __init__.py  gs.py  overlay.py
src/marimo_3dv/pipeline/: context.py  gui.py
src/marimo_3dv/viewer/: __init__.py  defaults.py  desktop.py  widget.py
src/marimo_3dv/viewer/assets/: native_viewer.js
src/marimo_viser/: __init__.py  pydantic_gui.py  viewer_widget.py  viser_widget.py
src/marimo_viser/assets/: native_viewer.css  native_viewer.js
src/marimo_viser/notebooks/: native_viewer.py  ply_viewer.py  spherical_harmonics_ply.py
tests/: test_desktop_viewer.py  test_gs_pipes.py  test_gui_pipeline.py  test_package_surface.py  test_paint_ray.py  test_pydantic_gui.py  test_scene_normalization.py  test_viewer_widget.py
