[project]
name = "marimo_viser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Schlack" }
]
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.10.0",
    "auto-mix-prep>=0.2.0",
    "jaxtyping>=0.3.9",
    "marimo>=0.22.4",
    "matplotlib>=3.10.8",
    "nerfview>=0.1.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92", # for faster jpeg encoding needed in viser
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "splines>=0.3.3",
    "torch>=2.11.0",
    "traitlets>=5.14.3",
    "ty>=0.0.29",
    "tyro>=1.0.12",
    "viser>=1.0.26",
]

[project.scripts]
marimo-viser = "marimo_viser:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"



# --- Formatting ---

[tool.ruff]
line-length = 80  # Must match above
extend-exclude = [".agents"]


[tool.ruff.lint] # Mostly just copied over from mojo
ignore = [
  "ANN002",     # TODO: Missing type annotation for *args
  "ANN003",     # TODO: Missing type annotation for **kwargs
  "ANN204",     # TODO: Missing return type annotation for special method
  "ANN401",     # TODO: Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "B008",       # Do not perform function call in argument defaults
  "B017",       # Do not assert blind exception: `Exception`
  "B028",       # No explicit `stacklevel` keyword argument found
  "D105",       # undocumented-magic-method
  "D107",       # Missing docstring in __init__ (constructor args go in class docstring)
  "E402",       # TODO: import top of file
  "E722",       # bare except
  "E731",       # TODO: Don't assign lambda
  "E741",       # TODO: Ambiguous variable name
  "F403",       # glob imports
  "F405",       # TODO: glob imports undefined
  "F821",       # TODO: Undefined names, means script is invalid
  "F841",       # TODO: unused variables
  "FURB122",    # Questionable readability improvement
  "RUF005",     # Consider iterable unpacking instead of concatenation
  "RUF010",     # Use explicit conversion flag
  "RUF012",     # Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF015",     # Prefer `next(iter(iterable))` over single element slice
  "SIM102",     # Collapsible if
  "SIM105",     # Suppressible exception
  "SIM108",     # Use ternary operator
  "SIM114",     # Combine arms with or
  "SIM115",     # Use context manager for opening files
  "SIM117",     # Merge with statements
  "SIM300",     # YODA conditions
  "SIM905",     # Use a list literal instead of str.split
  "F722",       # Unexpected token in forward annotation, clashes with jaxtyping
]
extend-select = [
  "ANN",        # Require function type annotations
  "B",          # Bugbear lints
  "D",          # Pydocstyle lints
  "FURB",       # Refurb lints for modernization
  "I",          # Import sorting lints
  "RUF",        # Ruff specific lints
  "SIM",        # Simplify lints
  "T10",        # Checks for the presence of debugger calls and imports.
  "UP",         # Type annotations should not use Union, Optional, etc
  "ISC",        # Good use of string concatenation
  "SIM",        # Common simplification rules
  "TID",        # Some good import practices
  "PTH",        # Use pathlib instead of os.path
  "NPY",        # Some numpy-specific things

]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]
"notebooks/*" = [
    "ANN",        # Require function type annotations doesn't work well with marimos def _()
    "B018",       # Useless expresions can be nice for output visualization in marimo
    "F401",       # Unused imports from marimo
    "RUF059",     # Unused unpacked variable
]
